--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./"
   },
-  "author": "",
+  "author": "Sultan",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
